--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,18 @@
 <%- include('_header.html') %>
   <h1>Gallery</h1>
   <% for(let l in iList ){ %>
-    <div class="gallery">
-      <a target="_blank" href="<%= iList[l] %>">
-        <img src="../<%= iList[l] %> " alt="<%=  l %> " width="60" height="60">
-      </a>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title"><%= iList[l] %></h5>
+      </div>
     </div>
+    <a target="_blank" href="<%= iList[l] %>">
+      <img src="../<%= iList[l] %>" class="card-img-top" alt="<%= l %>" width="80" height="80">
+    </a>
     <% } %>
-      <% if(username) {%>
         <p>Hello <%= username %>
         </p>
         <a href="logout">logout</a>
-        <% }else{ %>
-          <a href="login">login</a>
-          <% } %>
             <a href="registyr">registry</a>
             <a href="upload">uploadimage</a>
             <a href="dregistyr">премахване на регистрацията</a>
