--- a/views/login.html
+++ b/views/login.html
@@ -10,12 +10,10 @@
     }
   </script>
   <form action="/loginregister2">
-    <ul>
-      <li><input class="username" placeholder="username" name="username" type="text"></li>
-      <li><input type="password"  placeholder="password" id="myInput" class="password" name="password"> </li>
-      <li><input type="checkbox" onclick="myFunction()">Show Password</li>
-      <li><input type="submit" class="sibmit"></li>
-    </ul>
+    <input class="form-control" placeholder="username" name="username" type="text"><br>
+    <input type="password" placeholder="password" id="myInput" class="form-control" name="password"><br>
+    <input type="checkbox" onclick="myFunction()">Show Password<br>
+    <input type="submit" class="btn btn-primary "><br>
     <div>
       <%= yorn %>
     </div>
