index,mongo,git,images/users

--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,8 @@
         <h5 class="card-title"><%= iList[l] %></h5>
       </div>
     </div>
-    <a target="_blank" href="<%= iList[l] %>">
-      <img src="../<%= iList[l] %>" class="card-img-top" alt="<%= l %>" width="80" height="80">
+    <a target="_blank" href="/image/<%= iList[l] %>">
+      <img src="/image/<%= iList[l] %>" class="card-img-top" alt="<%= l %>" width="80" height="80">
     </a>
     <% } %>
         <p>Hello <%= username %>
