head title keywords

--- a/views/_header.html
+++ b/views/_header.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <title>example</title>
+  <title>Easy Gallery</title>
   <meta charset="UTF-8">
+  <meta name="keywords" content="gallery,easy,галерия,простичко,проста,ангел,раев,лесна галерия,angelator312,easy gallery">
   <script src="/bootstrap.js"></script>
   <link href="/bootstrap.css">
   
