index and html ejs

--- a/views/_header.html
+++ b/views/_header.html
@@ -5,8 +5,8 @@
   <title>Easy Gallery</title>
   <meta charset="UTF-8">
   <meta name="keywords" content="gallery,easy,галерия,простичко,проста,ангел,раев,лесна галерия,angelator312,easy gallery">
-  <script src="/bootstrap.js"></script>
-  <link href="/bootstrap.css">
+  <script src="/js/bootstrap.js"></script>
+  <link href="/css/bootstrap.css">
   
 </head>
 
