--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,10 @@
       <img src="/image/<%= iList[l] %>" class="card-img-top" alt="<%= l %>" width="80" height="80">
     </a>
     <% } %>
-        <p>Hello <%= username %>
-        </p>
-        <a href="logout">logout</a>
-            <a href="upload">uploadimage</a>
-            <a href="dregistyr">премахване на регистрацията</a>
-            <%- include('_footer.html') %>
+    <p>Hello <%= username %>
+    </p>
+    <a href="logout">logout</a>
+    <a href="upload">uploadimage</a>
+    <a href="delimage">delete image</a>
+    <a href="dregistyr">премахване на регистрацията</a>
+<%- include('_footer.html') %>
