--- a/views/login.html
+++ b/views/login.html
@@ -11,7 +11,7 @@
   </script>
   <form action="/loginregister2">
     <input class="form-control" placeholder="username" name="username" type="text" required autocomplete="username"><br>
-    <input type="password" placeholder="password" id="myInput" class="form-control" name="password" minlength="8" required autocomplete="current-password"><br>
+    <input type="password" placeholder="password" id="myInput" class="form-control" name="password"  required autocomplete="current-password"><br>
     <input type="checkbox" onclick="myFunction()">Show Password<br>
     <input type="submit" class="btn btn-primary "><br>
     <div>
