--- a/views/upload.html
+++ b/views/upload.html
@@ -1,6 +1,6 @@
 <%- include('_header.html') %>
     <form id="uploadimage" enctype="multipart/form-data" action="/uploadimage" method="post">
-        <input type="file" name="myfile" /><br /><br />
+        <input type="file" accept=".png,.jpg,.JPEG,.gif" name="myfile" /><br /><br />
         <input type="submit" value="Upload Image" name="submit"><br /><br />
         <span id="status"></span>
     </form>
