--- a/views/_header.html
+++ b/views/_header.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Easy Gallery</title>
+    <meta charset="UTF-8" />
+    <meta
+      name="keywords"
+      content="gallery,easy,галерия,простичко,проста,ангел,раев,лесна галерия,angelator312,easy gallery"
+    />
+    <script src="/js/bootstrap.js"></script>
+    <link href="/css/bootstrap.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+  </head>
 
-<head>
-  <title>Easy Gallery</title>
-  <meta charset="UTF-8">
-  <meta name="keywords" content="gallery,easy,галерия,простичко,проста,ангел,раев,лесна галерия,angelator312,easy gallery">
-  <script src="/js/bootstrap.js"></script>
-  <link href="/css/bootstrap.css">
-  
-</head>
-
-<body>
+  <body></body>
+</html>
